# ASI_12c_3_kedro

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_wandb.py
api/: main.py  model_loader.py  schemas.py
app/: streamlit_app.py
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_data_processing.yml  parameters_synthetic.yml
src/asi_kedro/: __main__.py  pipeline_registry.py  settings.py
src/asi_kedro/pipelines/automl/: nodes.py  pipeline.py
src/asi_kedro/pipelines/data_processing/: nodes.py  pipeline.py
src/asi_kedro/pipelines/model_evaluation/: nodes.py  pipeline.py
src/asi_kedro/pipelines/model_training/: nodes.py  pipeline.py  pipeline.txt
src/asi_kedro/pipelines/synthetic/: __init__.py  nodes.py  pipeline.py
streamlit/: secrets.toml.example
tests/pipelines/synthetic/: test_pipeline.py
